Implemented general covid information
